package org.example;

public interface Media {

    void play();
}
