package org.example;

public class VideoStream {

    public VideoStream(){}

    public void reproduce(){
        System.out.println("Reproduciendo VideoStream");
    }
}
